--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script>
         // *** 1. Замените этот URL на ваш рабочий URL WebHook из n8n ***
-        const WEBHOOK_URL = "ЗАМЕНИТЕ_НА_ВАШ_N8N_WEBHOOK_URL"; 
+        const WEBHOOK_URL = "https://n8n.1221.by/webhook/2ab9336c-446d-4fd5-a6a1-bbed3364fcbc"; 
         
         const chatWindow = document.getElementById('chat-window');
         const messageInput = document.getElementById('message-input');
